--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ ffmpeg>=1.4
 ffmpeg-python>=0.2.0
 librosa>=0.8.0
 matplotlib>=3.3.2
-numpy>=1.19.2
+numpy==1.16.0
 pandas>=1.1.3
 scipy>=1.4.1
+pydot>=1.4.1
+# graphviz
+# keras==2.2.2
+# tensorflow==2.3.1
